--- a/TextSimulator/.classpath
+++ b/TextSimulator/.classpath
@@ -1,9 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="ChrisProject/Previous project/Previous project/source/src"/>
 	<classpathentry kind="src" path="ChrisProject/Previous project/Previous project/test/src"/>
 	<classpathentry kind="src" path="source"/>
 	<classpathentry kind="lib" path="json-simple-1.1.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/prometheus-ai-master">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/lucym/.m2/repository/com/google/inject/guice/4.1.0/guice-4.1.0.jar" sourcepath="C:/Users/lucym/.m2/repository/com/google/inject/guice/4.1.0/guice-4.1.0-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="com.google.inject"/>
+			<attribute name="maven.artifactId" value="guice"/>
+			<attribute name="maven.version" value="4.1.0"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="ChrisProject/Previous project/Previous project/NN Prometheus-Neural-Network-master/Prometheus-Neural-Network-master/Neural Network/bin"/>
 </classpath>
