--- a/prometheus-ai/.classpath
+++ b/prometheus-ai/.classpath
@@ -8,68 +8,21 @@
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
-			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="json-simple-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/guice-4.1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/guice-4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/guice-assistedinject-4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/javax.inject-1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files.zip"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/gs-core-1.0/gs-core-1.0/gs-core-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/gs-core-1.0/gs-core-1.0/gs-core-1.0-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/gs-core-1.0/gs-core-1.0/gs-core-1.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/gs-ui-1.0/gs-ui-1.0/gs-ui-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/gs-ui-1.0/gs-ui-1.0/gs-ui-1.0-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/gs-ui-1.0/gs-ui-1.0/gs-ui-1.0-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/bcmail-jdk14-138.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/bcprov-jdk14-138.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/commons-math-2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/commons-math3-3.4.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/gs-algo-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/gs-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/gs-ui-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/itext-2.1.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/jcommon-1.0.17.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/jfreechart-1.0.14.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/junit-4.12.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/mbox2-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/pherd-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/scala-library-2.10.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (1)/xml-apis-1.3.04.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/commons-lang3-3.9-bin/commons-lang3-3.9/commons-lang3-3.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/commons-lang3-3.9-bin/commons-lang3-3.9/commons-lang3-3.9-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/commons-lang3-3.9-bin/commons-lang3-3.9/commons-lang3-3.9-tests.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/commons-lang3-3.9-bin/commons-lang3-3.9/commons-lang3-3.9-test-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (2)/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (2)/junit-4.12.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/testng-6.0.jar/testng-6.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (3)/byte-buddy-1.10.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (3)/byte-buddy-agent-1.10.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (3)/generics-resolver-3.0.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (3)/mockito-core-3.2.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (3)/mockito-scala_2.12-1.11.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (3)/mockito-scala-scalatest_2.12-1.11.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (3)/objenesis-2.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (3)/scalactic_2.12-3.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (3)/scala-library-2.12.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (3)/scala-reflect-2.12.9.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/testng-6.8.17-javadoc.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (4)/aopalliance-1.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (4)/guava-19.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (4)/guice-4.1.0-no_aop.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (4)/javax.inject-1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (4)/jcommander-1.72.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (4)/snakeyaml-1.21.jar"/>
-	<classpathentry kind="lib" path="C:/Users/reemm/Downloads/jar_files (4)/testng-7.1.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/TextSimulator/json-simple-1.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
